Add basic crud repositories

--- a/snack-machine-backend/src/main/resources/templates/snack-machine.html
+++ b/snack-machine-backend/src/main/resources/templates/snack-machine.html
@@ -21,7 +21,7 @@
                     <p>Money inserted:</p>
                 </div>
                 <div class="col">
-                    <strong th:text="${snackMachine.moneyInTransaction.amount} + ' $'"></strong>
+                    <strong th:text="${snackMachine.moneyInTransaction} + ' $'"></strong>
                 </div>
             </div>
 
